first box layout

--- a/index.html
+++ b/index.html
@@ -15,8 +15,51 @@
     <!-- external css -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <h1 class="text-4xl font-semibold">Hello</h1>
+  <body class="bg-gray-200">
+    <!-- GLOBAL CONTAINER -->
+    <div class="container p-2 mx-auto max-w-7xl md:p-10">
+      <!-- Grid -->
+      <div class="text-white">
+        <!-- Box 1 -->
+        <div class="relative p-10 bg-purple-700 rounded-xl">
+          <!-- Quotes Image -->
+          <img
+            src="images/bg-pattern-quotation.svg"
+            alt=""
+            class="absolute scale-125 top-3 right-10 md:top-7 md:right-24 md:scale-150"
+          />
+          <!-- Box Header -->
+          <div class="z-10 flex space-x-4">
+            <img
+              src="images/image-daniel.jpg"
+              alt=""
+              class="w-10 h-10 rounded-full ring ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opcaity-90">Daniel Clifford</h4>
+              <p class="opacity-50">Verified Graduate</p>
+            </div>
+          </div>
+
+          <!-- Large Text -->
+          <p class="relative z-10 mt-6 text-xl">
+            I received a job offer mid-course and the subjects I learned were
+            current, if not more so, in the company I joined. I honestly feel I
+            got every penny's worth.
+          </p>
+
+          <!-- Small Text -->
+          <p class="mt-6 opacity-50">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            officia labore consequatur quia iste tempore voluptatibus? Rerum
+            sequi laborum vitae! Ipsa nobis quod sunt porro quo? Quidem
+            aspernatur obcaecati laborum quaerat expedita fuga voluptates
+            veritatis amet vero non officia quia, similique nisi, repellendus
+            corrupti ipsa aut nobis quasi deleniti distinctio!"
+          </p>
+        </div>
+      </div>
+    </div>
     <script src="js/index.js" defer></script>
   </body>
 </html>
