--- a/index.html
+++ b/index.html
@@ -58,6 +58,34 @@
             corrupti ipsa aut nobis quasi deleniti distinctio!"
           </p>
         </div>
+
+        <!-- Box 2 -->
+        <div class="p-10 bg-gray-600 rounded-xl">
+          <!-- Box Header -->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-jonathan.jpg"
+              alt=""
+              class="w-10 h-10 rounded-full ring ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opcaity-90">Jonathan Walters</h4>
+              <p class="opacity-50">Verified Graduate</p>
+            </div>
+          </div>
+
+          <!-- Large Text -->
+          <p class="mt-6 text-xl">
+            The team was very supportive and kept me motivated.
+          </p>
+
+          <!-- Small Text -->
+          <p class="mt-6 opacity-50">
+            "Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Perferendis architecto culpa id dignissimos quas placeat sint
+            dolore! Veritatis voluptates ipsa corporis!"
+          </p>
+        </div>
       </div>
     </div>
     <script src="js/index.js" defer></script>
