adding remaining boxes

--- a/index.html
+++ b/index.html
@@ -86,6 +86,135 @@
             dolore! Veritatis voluptates ipsa corporis!"
           </p>
         </div>
+
+        <!-- Box 3 -->
+        <div class="hidden p-10 text-gray-900 bg-white rounded-xl">
+          <!-- Box Header -->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-kira.jpg"
+              alt=""
+              class="w-10 h-10 rounded-full ring ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opcaity-90">Kira Wittle</h4>
+              <p class="opacity-50">Verified Graduate</p>
+            </div>
+          </div>
+
+          <!-- Large Text -->
+          <p class="mt-6 text-xl">
+            Such a life-changing experience. Highly recommended!
+          </p>
+
+          <!-- Small Text -->
+          <p class="mt-6 opacity-50">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+            exercitationem aliquid repellendus suscipit perspiciatis labore
+            eius. Perspiciatis, similique quas quis repellendus ducimus
+            corporis, libero in reiciendis, voluptatum enim aperiam quia
+            blanditiis nobis quo corrupti laborum aspernatur velit dolores.
+            Pariatur quae minus explicabo! Praesentium velit placeat iure ipsa
+            non necessitatibus ratione laudantium aut earum. Possimus placeat
+            adipisci aut doloremque ipsa voluptate soluta dolorem consectetur
+            harum nesciunt! Vel deleniti aliquam dolores laudantium sed nam quod
+            accusamus aperiam."
+          </p>
+        </div>
+
+        <!-- Box 4 -->
+        <div class="p-10 text-gray-900 bg-white rounded-xl">
+          <!-- Box Header -->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-jeanette.jpg"
+              alt=""
+              class="w-10 h-10 rounded-full ring ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opcaity-90">Jeanette Harmon</h4>
+              <p class="opacity-50">Verified Graduate</p>
+            </div>
+          </div>
+
+          <!-- Large Text -->
+          <p class="mt-6 text-xl">
+            An overall wonderful and rewarding experience.
+          </p>
+
+          <!-- Small Text -->
+          <p class="mt-6 opacity-50">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Id illo
+            rem commodi repellendus voluptate fugit adipisci sunt, consequuntur
+            maiores?"
+          </p>
+        </div>
+
+        <!-- Box 5 -->
+        <div class="p-10 bg-gray-900 rounded-xl">
+          <!-- Box Header -->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-patrick.jpg"
+              alt=""
+              class="w-10 h-10 rounded-full ring ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opcaity-90">Patrick Abrams</h4>
+              <p class="opacity-50">Verified Graduate</p>
+            </div>
+          </div>
+
+          <!-- Large Text -->
+          <p class="mt-6 text-xl">
+            "Awesome teaching support from TAS who did the bootcamp themselves
+            Getting guidance from then and learning from their experience was
+            easy."
+          </p>
+
+          <!-- Small Text -->
+          <p class="mt-6 opacity-50">
+            "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti
+            dignissimos a ex reiciendis, optio cupiditate. Consectetur assumenda
+            pariatur ut consequuntur animi delectus, saepe, deserunt, nisi fugit
+            corporis ipsum mollitia sint?"
+          </p>
+        </div>
+
+        <!-- Box 6 -->
+        <div class="p-10 text-gray-900 bg-white rounded-xl">
+          <!-- Box Header -->
+          <div class="flex space-x-4">
+            <img
+              src="images/image-kira.jpg"
+              alt=""
+              class="w-10 h-10 rounded-full ring ring-purple-300"
+            />
+            <div class="text-sm">
+              <h4 class="opcaity-90">Kira Wittle</h4>
+              <p class="opacity-50">Verified Graduate</p>
+            </div>
+          </div>
+
+          <!-- Large Text -->
+          <p class="mt-6 text-xl">
+            Such a life-changing experience. Highly recommended!
+          </p>
+
+          <!-- Small Text -->
+          <p class="mt-6 opacity-50">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+            exercitationem aliquid repellendus suscipit perspiciatis labore
+            eius. Perspiciatis, similique quas quis repellendus ducimus
+            corporis, libero in reiciendis, voluptatum enim aperiam quia
+            blanditiis nobis quo corrupti laborum aspernatur velit dolores.
+            Pariatur quae minus explicabo! Praesentium velit placeat iure ipsa
+            non necessitatibus ratione laudantium aut earum. Possimus placeat
+            adipisci aut doloremque ipsa voluptate soluta dolorem consectetur
+            harum nesciunt! Vel deleniti aliquam dolores laudantium sed nam quod
+            accusamus aperiam."
+          </p>
+        </div>
       </div>
     </div>
     <script src="js/index.js" defer></script>
