adding grid classes

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
   <body class="bg-gray-200">
     <!-- GLOBAL CONTAINER -->
     <div class="container p-2 mx-auto max-w-7xl md:p-10">
-      <!-- Grid -->
-      <div class="text-white">
+      <!-- Grid Container -->
+      <div
+        class="grid grid-cols-1 gap-6 text-white md:grid-cols-4 md:grid-rows-2"
+      >
         <!-- Box 1 -->
-        <div class="relative p-10 bg-purple-700 rounded-xl">
+        <div class="relative p-10 bg-purple-700 rounded-xl md:col-span-2">
           <!-- Quotes Image -->
           <img
             src="images/bg-pattern-quotation.svg"
@@ -88,7 +90,9 @@
         </div>
 
         <!-- Box 3 -->
-        <div class="hidden p-10 text-gray-900 bg-white rounded-xl">
+        <div
+          class="hidden p-10 text-gray-900 bg-white md:block rounded-xl md:row-span-2"
+        >
           <!-- Box Header -->
           <div class="flex space-x-4">
             <img
@@ -109,16 +113,17 @@
 
           <!-- Small Text -->
           <p class="mt-6 opacity-50">
-            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
-            exercitationem aliquid repellendus suscipit perspiciatis labore
-            eius. Perspiciatis, similique quas quis repellendus ducimus
-            corporis, libero in reiciendis, voluptatum enim aperiam quia
-            blanditiis nobis quo corrupti laborum aspernatur velit dolores.
-            Pariatur quae minus explicabo! Praesentium velit placeat iure ipsa
-            non necessitatibus ratione laudantium aut earum. Possimus placeat
-            adipisci aut doloremque ipsa voluptate soluta dolorem consectetur
-            harum nesciunt! Vel deleniti aliquam dolores laudantium sed nam quod
-            accusamus aperiam."
+            "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate
+            tempora ea nesciunt quam expedita, odio velit. Odio id culpa quidem
+            expedita alias consequuntur sint, beatae illo consequatur aperiam
+            doloremque. Minus dolores qui ducimus praesentium iure delectus illo
+            fugit est voluptate consequatur rerum hic totam cumque dolorum,
+            labore ut maxime officiis nihil veritatis doloribus aut a. Omnis
+            doloribus atque fugiat voluptates! Nam labore, soluta porro eos
+            harum non suscipit explicabo corporis dolores architecto eius et
+            fuga possimus fugit temporibus? Quos tempora consequatur ipsa sequi
+            commodi porro itaque minus optio et magni! Iusto explicabo obcaecati
+            sed provident molestias, minima vero dolore voluptatibus!"
           </p>
         </div>
 
@@ -151,7 +156,7 @@
         </div>
 
         <!-- Box 5 -->
-        <div class="p-10 bg-gray-900 rounded-xl">
+        <div class="p-10 bg-gray-900 rounded-xl md:col-span-2">
           <!-- Box Header -->
           <div class="flex space-x-4">
             <img
@@ -182,7 +187,7 @@
         </div>
 
         <!-- Box 6 -->
-        <div class="p-10 text-gray-900 bg-white rounded-xl">
+        <div class="p-10 text-gray-900 bg-white rounded-xl md:hidden">
           <!-- Box Header -->
           <div class="flex space-x-4">
             <img
@@ -206,13 +211,7 @@
             "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
             exercitationem aliquid repellendus suscipit perspiciatis labore
             eius. Perspiciatis, similique quas quis repellendus ducimus
-            corporis, libero in reiciendis, voluptatum enim aperiam quia
-            blanditiis nobis quo corrupti laborum aspernatur velit dolores.
-            Pariatur quae minus explicabo! Praesentium velit placeat iure ipsa
-            non necessitatibus ratione laudantium aut earum. Possimus placeat
-            adipisci aut doloremque ipsa voluptate soluta dolorem consectetur
-            harum nesciunt! Vel deleniti aliquam dolores laudantium sed nam quod
-            accusamus aperiam."
+            corporis."
           </p>
         </div>
       </div>
