installing line clamp

--- a/index.html
+++ b/index.html
@@ -45,19 +45,25 @@
 
           <!-- Large Text -->
           <p class="relative z-10 mt-6 text-xl">
-            I received a job offer mid-course and the subjects I learned were
+            "I received a job offer mid-course and the subjects I learned were
             current, if not more so, in the company I joined. I honestly feel I
-            got every penny's worth.
+            got every penny's worth."
           </p>
 
           <!-- Small Text -->
-          <p class="mt-6 opacity-50">
+          <p class="mt-6 opacity-50 line-clamp-6">
             "Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
             officia labore consequatur quia iste tempore voluptatibus? Rerum
             sequi laborum vitae! Ipsa nobis quod sunt porro quo? Quidem
             aspernatur obcaecati laborum quaerat expedita fuga voluptates
             veritatis amet vero non officia quia, similique nisi, repellendus
-            corrupti ipsa aut nobis quasi deleniti distinctio!"
+            corrupti ipsa aut nobis quasi deleniti distinctio!" Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Quas ullam ducimus,
+            sequi laudantium facilis nemo excepturi quidem a possimus cum
+            dolores esse aspernatur, recusandae labore provident quis blanditiis
+            magnam autem. Laboriosam aliquam dolorem libero sit ut sunt facere
+            pariatur consequuntur neque rerum? Eius incidunt, obcaecati fuga
+            sequi voluptatum recusandae autem.
           </p>
         </div>
 
@@ -82,10 +88,16 @@
           </p>
 
           <!-- Small Text -->
-          <p class="mt-6 opacity-50">
+          <p class="mt-6 opacity-50 line-clamp-6">
             "Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Perferendis architecto culpa id dignissimos quas placeat sint
-            dolore! Veritatis voluptates ipsa corporis!"
+            dolore! Veritatis voluptates ipsa corporis!" Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Soluta consequuntur facilis neque
+            a non pariatur vitae labore sunt facere modi. Laborum, et ullam.
+            Molestias atque delectus saepe mollitia tempore, ullam ad
+            praesentium! Quasi officiis commodi soluta veniam tenetur nihil
+            debitis? Ipsa, doloremque. Laboriosam temporibus excepturi error,
+            officia vel consectetur at?
           </p>
         </div>
 
